# sre-agent

./: .env.sample  .gitignore  README.md  k3d-config.yaml  pyproject.toml  requirements.txt
agent/: graph.py  state.py
agent/nodes/: detect.py  diagnose.py  post_mortem.py  remediate.py  retrieve.py
infra/aws/: main.tf  outputs.tf  variables.tf
ingestion/: config.py  create_index.py  seed_runbooks.py
rag/: retriever.py
runbooks/: crash_loop_backoff.md  high_cpu_throttling.md  node_not_ready.md  oom_killed.md  pod_pending.md
scripts/: run_agent.py
