[project]
name = "sre-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.2",
    "langchain>=1.3",
    "langchain-openai>=0.3",
    "langchain-azure-ai>=0.1",
    "azure-search-documents>=11.6",
    "azure-identity>=1.19",
    "pydantic-settings>=2.7",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "boto3>=1.38",
    "prometheus-client>=0.21",
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends.legacy:build"